# path_agent

./: CLAUDE.md  pyproject.toml
ccpp/: README.md  SUMMARY.md  __init__.py  ccpp_solver.py  example_usage.py  line_segment.py  polygon_region.py  test_ccpp.py  uav_assignment.py
ob_2d/: COLOR.py  README.md  SET.py  bug.py  bug10.py  bug11.py  bug6.py  bug7.py  bug8.py  bug9.py  color.css  color.csv  color.tsv.css  obstacle_list_list2D.json  output_filename.py  parameters.yaml  path_planning.py  plot.py  run.py  test.py  uav.py  zException.py  zdist.py  zpytest.py  zqt_model_process.py  zrand.py  zread_pickle.py  zstatistics.py  zyaml.py
obstacle_2d_minimal/: README.md  README_UAV_GUIDED.md  REFACTOR_PLAN.md  SCHEDULER_README.md  analyze_functions.py  bug.py  dead_record.py  generate_diverse_scenario.py  generate_simple_pkl.py  generate_uav_guided_scenario.py  geometry.py  inter_avoid.py  jpg2mp4.py  obstacle_corridor.py  others.py  output_filename.py  plot.py  quick_analyze.py  run.py  run_test.py  simple_trace.py  test.py  test_baseline_bool.py  test_simple.py  test_standalone.py  test_uav_guided.py  trace_import.py  uav.py  zdist.py  zgeometry.py  zrand.py  zstatistics.py  zyaml.py
shared_util/: __init__.py  io_filename.py  platform_interpreter.py  sys_argument.py
uav_allocation_analysis/: README.md  SCHEDULER_README.md  allocation_details.txt  allocation_details_full.txt  complete_analysis_report.txt  env_data.yaml  env_pydantic.py  extract_uav_positions.py  plot_allocation.py  plot_allocation_full.py  plot_complete_analysis.py  plot_uav_trajectory.py  rule.json  (+8 more)
(+278 files in other folders)
