[project]
name = "path_agent"
version = "0.1.0"
description = "Path Agent - Multi-Agent Path Planning with MPC and CCPP"
requires-python = ">=3.12"
dependencies = [
    "cvxopt>=1.3.3",
    "cvxpy>=1.8.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyttsx3>=2.99",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
]
